certified-kubernetes-administrator-course-master/docs/15-Mock-Exams/aa.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379

  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: redis
    ports:
    - protocol: TCP
      port: 6379
---

apiVersion: v1
kind: Pod
metadata:
  name: sega
spec:
  containers:
  - name: tails
    image: busybox
    command: ["sleep", "3600"]
  - name: sonic
    image: nginx
---

apiVersion: v1
kind: Service
metadata:
  name: front-end-service
  labels:
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    nodePort: 30883
  selector:
    tier: frontend
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webapp
  image: nginx
  labels:
    tier: frontend
spec:
  selector:
    matchLabels:
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        tier: frontend
  spec:
    containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80  




---

apiVersion: v1
kind: Pod
metadata:
  name: alpha
spec:
  nodename: node01
  containers:
  - name: alpha
    image: redis
  tolerations:
    - key: "key1"
      operator: "Equal"
      value: "value1"
      effect: "NoSchedule"   



---
apiVersion: v1
kind: Deployment
metadata:
  name: beta-apps
  labels:
    app_type: beta
spec:
  replicas: 2
  selector:
    matchLabels:
      app_type: beta
  template:
    metadata:
      labels:
        app_type: beta
    spec:      
      containers:
      - name: beta-apps
        image: nginx
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - antarctica-east1
                - antarctica-west1



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - host: ckad-mock-exam-solution.com
  - http:
      paths:
      - path: /video
        pathType: Prefix
        backend:
          service:
            name: my-video-service
            port:
              number: 8080



---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-rprobe
spec:
  containers:
  - name: pod-with-rprobe
    image: registry.k8s.io/e2e-test-images/agnhost:2.40
    args:
    - liveness
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080


---
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: jupiter
    image: nginx
    command: ["sleep", "3600"]
  - name: europa
    image: busybox
